root dokerfile added